--- a/Kasa/src/Sass/main.css
+++ b/Kasa/src/Sass/main.css
@@ -1,6 +1,6 @@
 .StyledLink {
   padding: 10px 15px;
-  color: #8186a0;
+  color: #FF6060;
   text-decoration: none;
   font-size: 18px;
   text-align: center;
