amelioration de décomposition avec ajout nouveaux composant, tags, carousel,collapse,  et passage css au validateur w3c

--- a/Kasa/src/Sass/coponents/Footer.css
+++ b/Kasa/src/Sass/coponents/Footer.css
@@ -1,6 +1,6 @@
 .FooterContainer {
   background-color: #000000;
-  color: #FFFFFF;
+  color: #ffffff;
   height: 209px;
   display: flex;
   align-items: center;
