--- a/Kasa/src/Sass/coponents/Footer.scss
+++ b/Kasa/src/Sass/coponents/Footer.scss
@@ -1,9 +1,9 @@
 .FooterContainer {
-    background-color: #000000;
-    color: #FFFFFF;
-    height: 209px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction:column;
+  background-color: #000000;
+  color: #ffffff;
+  height: 209px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
