--- a/Kasa/src/Sass/main.scss
+++ b/Kasa/src/Sass/main.scss
@@ -4,11 +4,11 @@
 @import "coponents/Header.scss";
 @import "coponents/Footer.scss";
 @import "coponents/Cards.scss";
-@import "coponents/DropDown.scss";
-@import "coponents/Slideshow.scss";
+@import "coponents/collapse.scss";
+@import "coponents/carousel.scss";
 
 @import "pages/Error.scss";
 @import "pages/Home.scss";
+@import "pages/Housing.scss";
 
-
-@import "Base/Tipography.scss"
+@import "Base/Tipography.scss";
