--- a/Kasa/src/Sass/coponents/Cards.css
+++ b/Kasa/src/Sass/coponents/Cards.css
@@ -12,6 +12,12 @@
   z-index: 0;
   margin: -245px 0px 30px 0px;
 }
+@media (max-width: 497px) {
+  .CardContainer {
+    padding: 40px 0px 0px 0px;
+    background: none;
+  }
+}
 
 .CardContent {
   display: flex;
@@ -37,6 +43,11 @@
   margin-left: 3px;
   border-radius: 7.5px;
   background: linear-gradient(180deg, rgba(255, 96, 96, 0.6) 90%, rgba(0, 0, 0, 0.3) 100%);
+}
+@media (max-width: 374px) {
+  .CardContent p {
+    margin-right: 3px;
+  }
 }
 
 .CardContent:hover {
