--- a/Kasa/src/Sass/coponents/Cards.scss
+++ b/Kasa/src/Sass/coponents/Cards.scss
@@ -9,49 +9,50 @@
   border-radius: 25px;
   background: #f6f6f6;
   position: relative;
-  z-index:0;
+  z-index: 0;
   margin: -245px 0px 30px 0px;
+  @media (max-width: 497px) {
+    padding: 40px 0px 0px 0px;
+    background: none;
+  }
 }
-
 .CardContent {
   display: flex;
   text-decoration: none;
   width: 340px;
-  color: white; 
+  color: white;
   height: 340px;
   border-radius: 10px;
   text-align: left;
   position: relative;
-  z-index:1;
+  z-index: 1;
   overflow: hidden;
   transition: transform 0.2s;
   align-items: end;
-  
 }
 .CardContent p {
   position: absolute;
-  z-index:2;
-  display:flex;
+  z-index: 2;
+  display: flex;
   font-weight: 600;
-  padding:2px;
+  padding: 2px;
   margin-left: 3px;
   border-radius: 7.5px;
-  background:linear-gradient(
+  background: linear-gradient(
     180deg,
     rgba(255, 96, 96, 0.6) 90%,
     rgba(0, 0, 0, 0.3) 100%
   );
-  
+  @media (max-width: 374px) {
+    margin-right: 3px;
+  }
 }
 .CardContent:hover {
   transform: scale(1.05);
 }
-
-
 .CardImageContainer {
   position: relative;
 }
-
 .CardImage {
   width: 340px;
   height: 340px;
