--- a/Kasa/src/Sass/coponents/Header.scss
+++ b/Kasa/src/Sass/coponents/Header.scss
@@ -1,6 +1,3 @@
-.HomeLogo {
-    height : 68px;
-}
 .NavContainer {
   padding-bottom: 25px;
   padding-top: 25px;
@@ -8,10 +5,32 @@
   justify-content: space-between;
   align-items: center;
   margin: 0px 60px 0px 60px;
-  
+  @media (max-width: 530px) {
+    margin: 10px;
+    padding: 0px;
+  }
+}
+.NavContainer a {
+  @media (max-width: 530px) {
+    width: 145px;
+  }
+}
+.NavContainer a img {
+  @media (max-width: 530px) {
+    width: 145px;
+  }
 }
 .active-link {
   text-decoration: underline;
 }
-
-
+.Navcontent {
+  @media (max-width: 530px) {
+    font-weight: 300;
+    white-space: nowrap;
+  }
+}
+.StyledLink {
+  @media (max-width: 530px) {
+    padding: 4px;
+  }
+}
