--- a/Kasa/src/Sass/pages/Error.scss
+++ b/Kasa/src/Sass/pages/Error.scss
@@ -4,23 +4,28 @@
   display: flex;
   flex-direction: column;
   gap: 45px;
-margin: 0px 40px 80px 40px;
+  margin: 0px 40px 80px 40px;
   text-align: center;
   color: $primary-color;
 }
 .ErrorTitle {
-  
   font-size: 288px;
-  
-margin: 0px;
+  width: 100%;
+  margin: 0px;
   font-weight: 700;
   line-height: 411px;
   letter-spacing: 0em;
+  @media (max-width: 690px) {
+    font-size: 144px;
+  }
+  @media (max-width: 370px) {
+    font-size: 74px;
+  }
 }
 .ErrorSubtitle {
   font-weight: 500;
   color: $primary-color;
-font-size:36px;
+  font-size: 36px;
 }
 .ErrorLink {
   color: $primary-color;
