--- a/Kasa/src/Sass/pages/Home.scss
+++ b/Kasa/src/Sass/pages/Home.scss
@@ -4,10 +4,11 @@
   align-content: center;
   flex-direction: column;
   margin: 0px 60px 0px 60px;
-  
   border-radius: 25px;
+  @media (max-width: 530px) {
+    margin: 0px;
+  }
 }
-
 .HomeFrontPicture {
   height: 223px;
   object-fit: cover;
@@ -24,24 +25,32 @@
   justify-content: center;
   z-index: 2;
   position: relative;
-  bottom: 240px;
+  bottom: 223px;
   opacity: 30%;
   background: darken($color: #000000, $amount: 0.1);
   height: 223px;
   border-radius: 25px;
+  margin: 0px;
 }
 .displayHomeFront h1 {
   color: white;
-  
   display: inline-flex;
   justify-content: center;
   align-items: center;
   font-weight: 500;
-  font-size: 48px;
-  width:100%;
+  width: 100%;
+  font-size: 24px;
+  padding: 0px 5px 0px 5px;
   z-index: 2;
   position: relative;
-  bottom: 395px;
+  bottom: 360px;
   margin: auto;
   border-radius: 25px;
+  @media (min-width: 685px) {
+    width: 100%;
+    font-size: 36px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 48px;
+  }
 }
