--- a/Kasa/src/Sass/pages/Housing.scss
+++ b/Kasa/src/Sass/pages/Housing.scss
@@ -1,13 +1,133 @@
 .housing-container {
     margin: 10px 60px 30px 60px;
-    color:#FF6060;
-}
-.display-housingcontent{
-    width:100%;
-}
-.housingcontenttags {
-    background:#FF6060;
+    color: #ff6060;
+    display: flex;
+    flex-wrap: wrap;
+    @media (max-width: 650px) {
+      margin: 10px;
+    }
+  }
+  .display-housingcontent {
+    width: 100%;
+  }
+  .housingcontenttags {
     color: white;
     border-radius: 10px;
-    padding:2px;
-}
+    padding: 2px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3px;
+  }
+  .tag {
+    display: inline-flex;
+    margin-right: 5px;
+    background-color: #ff6060;
+    color: white;
+    border-radius: 10px;
+    padding: 4px 15px 4px 15px;
+  }
+  
+  .display-rating {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    @media (max-width: 610px) {
+      flex-direction: column;
+    }
+  }
+  .host-picture {
+    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+  }
+  .order-display-rating-one {
+    @media (max-width: 610px) {
+      margin-bottom: 10px;
+    }
+  }
+  .order-display-rating-one h1 {
+    font-weight: 500;
+    font-size: 36px;
+    margin: 0px;
+  }
+  .order-display-rating-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    @media (max-width: 610px) {
+      flex-direction: row-reverse;
+      justify-content: space-between;
+    }
+    @media (max-width: 374px) {
+      flex-direction: column;
+      justify-content: center;
+      justify-items: center;
+      align-items: center;
+    }
+  }
+  .order-display-rating-three p {
+    display: flex;
+    text-align: end;
+    align-items: center;
+    font-weight: 600;
+    font-size: 18px;
+    padding: 2px;
+    margin-right: 5px;
+  }
+  .order-display-rating-three {
+    display: flex;
+    flex-direction: row;
+    width: 167px;
+    height: 64px;
+    padding-bottom: 10px;
+    @media (max-width: 610px) {
+      width: 100%;
+      justify-content: end;
+    }
+    @media (max-width: 374px) {
+      justify-content: center;
+      justify-items: center;
+      align-items: center;
+    }
+  }
+  .ScoreRating {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    @media (max-width: 610px) {
+      justify-content: end;
+    }
+  }
+  .rating-display {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+  }
+  .display-content {
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    @media (max-width: 610px) {
+      flex-direction: column;
+      gap: 6px;
+    }
+  }
+  .display-content-one {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    @media (max-width: 374px) {
+      margin: 10px 0px 10px 0px;
+    }
+  }
+  .image-numbers {
+    color: white;
+    position: relative;
+    bottom: 40px;
+  }
+  .control-dots {
+    display: none;
+  }
