--- a/Kasa/src/Sass/main.scss
+++ b/Kasa/src/Sass/main.scss
@@ -1,11 +1,11 @@
 @import "Utils/style/styled-link";
 @import "Utils/style/color.scss";
 
-@import "coponents/Header.scss";
-@import "coponents/Footer.scss";
-@import "coponents/Cards.scss";
-@import "coponents/collapse.scss";
-@import "coponents/carousel.scss";
+@import "components/Header.scss";
+@import "components/Footer.scss";
+@import "components/Cards.scss";
+@import "components/collapse.scss";
+@import "components/carousel.scss";
 
 @import "pages/Home.scss";
 @import "pages/Housing.scss";
