--- a/Kasa/src/Sass/components/_Cards.scss
+++ b/Kasa/src/Sass/components/_Cards.scss
@@ -10,8 +10,12 @@
   background: #f6f6f6;
   position: relative;
   z-index: 0;
- 
-  @media (max-width: 497px) {
+  gap:10px;
+ @media (min-width:1440px){
+  display: grid;
+  grid: auto-flow dense / 340px 340px 340px;
+ }
+  @media (max-width: 575px) {
     padding: 40px 0px 0px 0px;
     background: none;
   }
@@ -19,9 +23,9 @@
 .CardContent {
   display: flex;
   text-decoration: none;
-  width: 340px;
+  margin-bottom: 40px;
   color: white;
-  height: 340px;
+ 
   border-radius: 10px;
   text-align: left;
   position: relative;
@@ -38,11 +42,7 @@
   padding: 2px;
   margin-left: 3px;
   border-radius: 7.5px;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 96, 96, 0.6) 90%,
-    rgba(0, 0, 0, 0.3) 100%
-  );
+  
   @media (max-width: 374px) {
     margin-right: 3px;
   }
@@ -52,10 +52,28 @@
 }
 .CardImageContainer {
   position: relative;
+  height:340px;
+}
+.CardImageContainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  z-index: 2;
 }
 .CardImage {
   width: 340px;
   height: 340px;
   object-fit: cover;
   border-radius: 10px;
+  @media (max-width: 685px) {
+    width:100%;
+  }
 }
