--- a/Kasa/src/Sass/main.css
+++ b/Kasa/src/Sass/main.css
@@ -62,8 +62,37 @@
   height: 209px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
   flex-direction: column;
+}
+@media (max-width: 500px) {
+  .FooterContainer {
+    justify-content: center;
+  }
+}
+@media (min-width: 1440px) {
+  .FooterContainer {
+    margin: 0px;
+    width: 100%;
+  }
+}
+
+.FooterContainer p {
+  width: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: end;
+  font-size: 24px;
+  margin-top: 60px;
+}
+@media (max-width: 500px) {
+  .FooterContainer p {
+    padding: 0px 150px;
+    margin-top: 10px;
+    font-size: 12px;
+    text-align: center;
+    width: 134px;
+  }
 }
 
 .CardContainer {
@@ -78,9 +107,15 @@
   background: #f6f6f6;
   position: relative;
   z-index: 0;
-  margin: -245px 0px 30px 0px;
+  gap: 10px;
 }
-@media (max-width: 497px) {
+@media (min-width: 1440px) {
+  .CardContainer {
+    display: grid;
+    grid: auto-flow dense/340px 340px 340px;
+  }
+}
+@media (max-width: 575px) {
   .CardContainer {
     padding: 40px 0px 0px 0px;
     background: none;
@@ -90,9 +125,8 @@
 .CardContent {
   display: flex;
   text-decoration: none;
-  width: 340px;
+  margin-bottom: 40px;
   color: white;
-  height: 340px;
   border-radius: 10px;
   text-align: left;
   position: relative;
@@ -110,7 +144,6 @@
   padding: 2px;
   margin-left: 3px;
   border-radius: 7.5px;
-  background: linear-gradient(180deg, rgba(255, 96, 96, 0.6) 90%, rgba(0, 0, 0, 0.3) 100%);
 }
 @media (max-width: 374px) {
   .CardContent p {
@@ -124,6 +157,18 @@
 
 .CardImageContainer {
   position: relative;
+  height: 340px;
+}
+
+.CardImageContainer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+  z-index: 2;
 }
 
 .CardImage {
@@ -132,6 +177,11 @@
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 10px;
+}
+@media (max-width: 685px) {
+  .CardImage {
+    width: 100%;
+  }
 }
 
 .collapse {
@@ -316,18 +366,39 @@
   justify-content: center;
   flex-direction: column;
 }
+@media (max-width: 385px) {
+  .displayHomeFront {
+    margin-bottom: -45px;
+  }
+}
 
 .displayHomeFront p {
   display: flex;
   justify-content: center;
-  z-index: 2;
+  width: 100%;
   position: relative;
-  bottom: 223px;
+  bottom: 170px;
+  left: 110px;
   opacity: 30%;
   background: black;
   height: 223px;
   border-radius: 25px;
-  margin: 0px;
+  margin: -110px;
+}
+@media (min-width: 385px) {
+  .displayHomeFront p {
+    bottom: 143px;
+  }
+}
+@media (min-width: 685px) {
+  .displayHomeFront p {
+    bottom: 157px;
+  }
+}
+@media (min-width: 1024px) {
+  .displayHomeFront p {
+    bottom: 170px;
+  }
 }
 
 .displayHomeFront h1 {
@@ -338,12 +409,16 @@
   font-weight: 500;
   width: 100%;
   font-size: 24px;
-  padding: 0px 5px 0px 5px;
   z-index: 2;
   position: relative;
-  bottom: 360px;
+  bottom: 135px;
   margin: auto;
   border-radius: 25px;
+}
+@media (max-width: 380px) {
+  .displayHomeFront h1 {
+    left: 10px;
+  }
 }
 
 @media (min-width: 685px) {
