--- a/Kasa/src/Sass/pages/_Home.scss
+++ b/Kasa/src/Sass/pages/_Home.scss
@@ -1,3 +1,4 @@
+
 .displayHome {
     display: flex;
     justify-content: center;
@@ -34,7 +35,7 @@
     justify-content: center;
     width:100%;
     position: relative;
-    bottom: 157px;
+    bottom:170px;
     left:110px;
     opacity: 30%;
     background: black;
@@ -44,9 +45,7 @@
     @media (min-width: 385px) {
       bottom:143px;
       }
-    @media  (max-width:384px){
-      bottom:170px;
-    }
+    
     @media (min-width:685px){
       bottom:157px;
     }
@@ -71,7 +70,11 @@
     bottom: 135px;
     margin: auto;
     border-radius: 25px;
+    @media(max-width:380px){
+    left:10px;
+    }
   }
+  
   @media (min-width: 685px) {
     .displayHomeFront h1 {
       width: 100%;
